Version Next

    - Require test directory to be absolute unless `-f' flag given (issue #143)

Version 1.6.1 released December 30, 2020

    - Fixed integer overflow bug setting "x-amz-meta-s3backer-filesize" (issue #141)

Version 1.6.0 released December 23, 2020

    - Added `--sse-key-id' flag (issue #137)
    - Log a more useful error message when IAM credentials not found (issue #136)
    - Warn on startup if disk space is insufficient for disk cache (issue #138)
    - Added zero block cache to better handle fstrim operations (issue #139)

Version 1.5.6 released October 30, 2020

    - Fixed phantom write error when server-side-encryption used (issue #135)
    - Allow bucket names with "subdirectory" for prefix (issue #130)
    - Added `--configFile' flag (issue #129)
    - Added `--accessKeyEnv' flag (issue #128)
    - Removed deprecated `--rrs' flag

Version 1.5.5 released August 22, 2020

    - Added `--no-vhost' flag (issue #117)
    - Added `--blockCacheNumProtected' flag (pr #119)
    - Added `--test-errors', `--test-delays', and `--test-discard'
    - Disallow stream encryption ciphers (issue #123)

Version 1.5.4 released October 8, 2019

    - Only set "x-amz-server-side-encryption" header with PUT requests (issue #116)
    - Don't kill IAM thread unless actually started (issue #115).

Version 1.5.3 released August 9, 2019

    - Fixed bug where IAM update thread was killed after fork (issue #115)
    - Fixed use-after-free bug in block_cache_verified() (issue #113)
    - Fixed use-after-free bug when updating IAM credentials (pr #114)
    - Fixed bug in test mode that was causing bogus I/O errors

Version 1.5.2 released July 9, 2019

    - Fixed bug where block cache would not work when run in the background (issue #112)
    - Fixed bug where we were not parsing HTTP headers case-insensitively (pr #11)
    - Bail out during `--listBlocks' if we see an object name past our block range
    - Added `--blockHashPrefix' flag (issue #80)
